tenzir/tests/exec/access/nested_field_suggestions.tql
// test: exec
// error: false
// timeout: 10

// Test field suggestions with nested records
from {
  user: {
    first_name: "John",
    last_name: "Doe", 
    email_address: "john@example.com",
    profile: {
      age: 30,
      department: "engineering"
    }
  },
  event: {
    timestamp: "2024-01-01T00:00:00Z",
    event_id: "12345"
  }
}
select (
  // Correct nested access (baseline)
  correct_name = user.first_name,
  correct_email = user.email_address,
  
  // Nested field access with typos - should get suggestions
  name_typo1 = user.first_nam,     // missing 'e' - should suggest first_name
  name_typo2 = user.frist_name,    // transposed 'ir' -> 'ri' - should suggest first_name  
  name_typo3 = user.lst_name,      // missing 'a' - should suggest last_name
  email_typo1 = user.email_adress, // missing 'd' - should suggest email_address
  email_typo2 = user.emal_address, // missing 'i' - should suggest email_address
  
  // Deeper nested access with typos
  age_typo = user.profile.ag,      // missing 'e' - should suggest age  
  dept_typo = user.profile.deparment, // missing 't' - should suggest department
  
  // Index-style access on nested records
  timestamp_typo = event["timestmp"], // missing 'a' - should suggest timestamp
  id_typo = event["event_i"],        // missing 'd' - should suggest event_id
  
  // Very different - should not get suggestions  
  bad_nested1 = user.xyz,
  bad_nested2 = event["abc123"],
  
  // Suppressed access
  suppressed_nested1 = user.nonexistent?,
  suppressed_nested2 = event["missing"]?
)